fix rendering on resized windows, bind ESC key

--- a/geomtest/Makefile
+++ b/geomtest/Makefile
@@ -1,7 +1,7 @@
 all: geomtest
 
 geomtest: *.cpp *.h
-	g++ *.cpp `pkg-config --cflags --libs gtk+-2.0` -o $@
+	g++ -Wall -Wextra *.cpp `pkg-config --cflags --libs gtk+-2.0` -o $@
 
 .PHONY: clean
 
